# py-neunet

./: README.md  documentation.md  setup.cfg
examples/: neural_load.py  simple_perceptron.py  test_nn.nn
neunet/: NeuralActivators.py  NeuralErrors.py  NeuralInputs.py  NeuralNetwork.py  __util__.py
