[metadata]
name = neunet
version = "a1"
description = Simple neural network builder.
long_description = file: README.md
long_description_content_type = text/markdown
author = Def-Try
author_email = googer760@gmail.com
url = https://github.com/Def-Try/py-neunet
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7.1
zip_safe = True
include_package_data = True
install_requires =
    numpy

[options.package_data]
  neunet = py.typed
